[package]
name = "load_balancer"
version = "0.1.0"
edition = "2021"
authors = ["Eliot", "Ronald"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.24"
tokio = { version = "1.36.0", features = ["full"] }
actix-web = "4"
actix-proxy = "0.2.0"
awc = "3.4.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
mockito = "1.4.0"
